# cookiecutter-python-package

./: LICENSE  README.md  cookiecutter.json  requirements.txt
.github/workflows/: tests.yml
tests/: conftest.py  test_creation.py
{{cookiecutter.package_name}}/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
{{cookiecutter.package_name}}/.github/workflows/: black.yml  tests.yml
{{cookiecutter.package_name}}/tests/unit_tests/: test_version.py
{{cookiecutter.package_name}}/{{cookiecutter.import_name}}/: version.py  {{cookiecutter.import_name}}.py
