[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = {{ cookiecutter.package_name }}
authors = [
    {
        name = {{ cookiecutter.author_name  }},
        email = {{ cookiecutter.author_email }}
    }
]
description = {{ cookiecutter.description }}
readme = "README.md"
requires-python = ">=3.8"
licese = {{ cookiecutter.license }}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools_scm]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
