[metadata]
name = {{ cookiecutter.package_name }}
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
description = {{ cookiecutter.description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{ cookiecutter.repo_url }}
project_urls =
    Documentation = {{ cookiecutter.docs_url }}
    Bug Tracker = {{ cookiecutter.issues_url }}
    Discussion Board = {{ cookiecutter.discussion_url }}
license = {{ cookiecutter.license }}
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    {% if cookiecutter.require_numpy == "yes" %}numpy{% endif %}
    {% if cookiecutter.require_pandas == "yes" %}pandas{% endif %}
    {% if cookiecutter.require_sklearn == "yes" %}scikit-learn{% endif %}
    {% if cookiecutter.require_numba == "yes" %}numba{% endif %}

[options.extras_require]
docs =
    numpydoc>=1.0.0
    sphinx-argparse>=0.2.5
    pydata-sphinx-theme>=0.4.3
    nbsphinx>=0.7.1
    ipykernel>=5.3.0
    recommonmark>=0.5.0
dev =
    pre-commit>=2.7.1
    black>=19.10b0

[options.entry_points]
console_scripts =
    {{ cookiecutter.import_name }} = {{ cookiecutter.import_name }}.{{ cookiecutter.import_name }}:main
